start top section

--- a/fortune.html
+++ b/fortune.html
@@ -11,18 +11,37 @@
   <body>
     <div class="wrapper">
 <!-- date volume -->
-      <header class="header1"></header>
+      <header class="header1">March 1, 2016 Volume 173 Number 3</header>
 <!-- fortune -->
-      <header class="header2"></header>
+      <header class="header2">FORTUNE</header>
 <!-- top section -->
-      <section class="col-1"></article>
-        <article class="col-2"></article>
-        <article class="col-3"></article>
+      <section>
+        <article class="col-1">SPECIAL REPORT
+        54
+        Bitter Sweets
+        For a decade and a half, the big chocolate makers have promised to end child labor in their industry—and have spent tens of millions of dollars in the effort. But as of the latest estimate, 2.1 million West African children still do the dangerous and physically taxing work of harvesting cocoa. What will it take to fix the problem?
+        By Brian O'Keefe</article>
+        <article class="col-2"><img src="images/bitter-sweets.jpg"></article>
+        <article class="col-3">76
+        The Man Who's Re-(Re-Re-)Inventing J.C. Penney
+        Marvin Ellison worked his way up to CEO at Penney by mastering the details of retail. But as Penney's two previous chiefs found out, it's going to take some fancy footwork to restore the department store's luster.
+        By Phil Wahba
+
+        90
+        Boom! Goes the Hoverboard Fad
+        Chinese factories created the hoverboard industry - then made it go up in smoke. Inside the trillion-dollar world of copycat manufacturing.
+        By Scott Cendrowski
+
+        98
+        The Fortune Entrepreneurs
+        Meet 15 founders who are disrupting their industries in novel ways. (One of those industries might be yours.)
+        By the Fortune staff</article>
+      </section>
 <!-- bottom section -->
-      <section class="lower-3-col-outer">
-        <article class="lower-3-col-1"></article>
-        <article class="lower-3-col-2"></article>
-        <article class="lower-3-col-3"></article>
+      <section class="lower-section-wrapper">
+        <article class="lower-section-col-1"></article>
+        <article class="lower-section-col-2"></article>
+        <article class="lower-section-col-3"></article>
       </section>
 <!-- footer -->
       <footer class="footer1"></footer>
