--- a/fortune.html
+++ b/fortune.html
@@ -4,48 +4,68 @@
   <title>Fortune</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/fortune-styles.css">
-    <meta name="description" content="Fortune magazint - Bitter Sweets.">
-    <link href='https://fonts.googleapis.com/css?family=Kadwa' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
+    <meta name="description" content="Fortune magazine - Bitter Sweets.">
+    <link href='https://fonts.googleapis.com/css?family=Advent+Pro:400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="wrapper">
 <!-- date volume -->
-      <header class="header1">March 1, 2016 Volume 173 Number 3</header>
+      <header class="header1"><p><span class="padding-right">March 1, 2016</span><span class="padding-right">Volume 173</span> Number 3</p></header>
 <!-- fortune -->
-      <header class="header2">FORTUNE</header>
+      <header class="header2"><h1>FORTUNE</h1></header>
 <!-- top section -->
       <section>
-        <article class="col-1">SPECIAL REPORT
-        54
-        Bitter Sweets
-        For a decade and a half, the big chocolate makers have promised to end child labor in their industry—and have spent tens of millions of dollars in the effort. But as of the latest estimate, 2.1 million West African children still do the dangerous and physically taxing work of harvesting cocoa. What will it take to fix the problem?
-        By Brian O'Keefe</article>
+        <article class="col-1">
+          <div class="bold padding-bottom">SPECIAL REPORT</div>
+          <span class="page-number bump-up-font">54</span>
+          <h1 class="bump-up-font">Bitter Sweets</h1>
+          <p>For a decade and a half, the big chocolate makers have promised to end child labor in their industry—and have spent tens of millions of dollars in the effort. But as of the latest estimate, 2.1 million West African children still do the dangerous and physically taxing work of harvesting cocoa. What will it take to fix the problem?</p>
+          <p><span class="serif-italic">By Brian O'Keefe</span></p>
+          <div class="caption absolute">Cocoa farming in Ivory Coast<img src="images/arrow.png"></div>
+        </article>
         <article class="col-2"><img src="images/bitter-sweets.jpg"></article>
-        <article class="col-3">76
-        The Man Who's Re-(Re-Re-)Inventing J.C. Penney
-        Marvin Ellison worked his way up to CEO at Penney by mastering the details of retail. But as Penney's two previous chiefs found out, it's going to take some fancy footwork to restore the department store's luster.
-        By Phil Wahba
+        <article class="col-3">
+          <span class="page-number">76</span>
+          <h1>The Man Who's Re-(Re-Re-)Inventing J.C. Penney</h1>
+          <p>Marvin Ellison worked his way up to CEO at Penney by mastering the details of retail. But as Penney's two previous chiefs found out, it's going to take some fancy footwork to restore the department store's luster.</p>
+          <p class="serif-italic">By Phil Wahba</p>
+          <span class="page-number">90</span>
+          <h1>Boom! Goes the Hoverboard Fad</h1>
+          <p>Chinese factories created the hoverboard industry - then made it go up in smoke. Inside the trillion-dollar world of copycat manufacturing.</p>
+          <p class="serif-italic">By Scott Cendrowski</p>
 
-        90
-        Boom! Goes the Hoverboard Fad
-        Chinese factories created the hoverboard industry - then made it go up in smoke. Inside the trillion-dollar world of copycat manufacturing.
-        By Scott Cendrowski
-
-        98
-        The Fortune Entrepreneurs
-        Meet 15 founders who are disrupting their industries in novel ways. (One of those industries might be yours.)
-        By the Fortune staff</article>
+          <span class="page-number">98</span>
+          <h1>The Fortune Entrepreneurs</h1>
+          <p>Meet 15 founders who are disrupting their industries in novel ways. (One of those industries might be yours.)</p>
+          <p class="serif-italic">By the Fortune staff</p>
+        </article>
       </section>
 <!-- bottom section -->
       <section class="lower-section-wrapper">
-        <article class="lower-section-col-1"></article>
-        <article class="lower-section-col-2"></article>
-        <article class="lower-section-col-3"></article>
+        <article class="lower-section-heading"><h1>THE WORLD'S MOST ADMIRED COMPANIES</h1></article>
+        <article class="lower-section-col">
+          <span class="page-number">109</span>
+          <h1>Our All-Star List and Industry Standouts</h1>
+          <p>The results are in! Thousand of insiders, directors, executives, and analysts pick the most respected names in global business.</p>
+          <p class="serif-italic">By Christopher Tkaczyk</p></article>
+        <article class="lower-section-col">
+          <span class="page-number">119</span>
+          <h1>Exclusive Q&A:</h1>
+          <h1>Apple CEO Tim Cook</h1>
+          <p>On Apple's down-cycle strategy, its evolving mind-set, and that rumored car.</p>
+          <p class="serif-italic">By Adam Lashinsky</p></article>
+        <article class="lower-section-col">
+          <span class="page-number">124</span>
+          <h1>The Ultimate Driving Machine Prepares for a Driverless World</h1>
+          <p>How 100-year-old BMW is racing toward automated driving, electric cars, and ride sharing.</p>
+          <p class="serif-italic">By Brian Dumaine</p></article>
       </section>
 <!-- footer -->
-      <footer class="footer1"></footer>
-      <footer class="footer2"></footer>
+      <footer class="footer1">ON THE COVER: PHOTOGRAPH BY NANCY NEWBERRY   THIS PAGE: PHOTOGRAP BY BENJAMIN LOWY</footer>
+      <footer class="footer2">March 1, 2016 FORTUNE.COM  3</footer>
     </div>
   </body>
 </html>
