more styling to text elements

--- a/fortune.html
+++ b/fortune.html
@@ -15,7 +15,10 @@
 <!-- date volume -->
       <header class="header1"><p><span class="padding-right">March 1, 2016</span><span class="padding-right">Volume 173</span> Number 3</p></header>
 <!-- fortune -->
-      <header class="header2"><h1>FORTUNE</h1></header>
+      <header class="header2">
+        <h1>FORTUNE</h1>
+        <p class="absolute3">features</p>
+      </header>
 <!-- top section -->
       <section>
         <article class="col-1">
@@ -24,7 +27,7 @@
           <h1 class="bump-up-font">Bitter Sweets</h1>
           <p>For a decade and a half, the big chocolate makers have promised to end child labor in their industry—and have spent tens of millions of dollars in the effort. But as of the latest estimate, 2.1 million West African children still do the dangerous and physically taxing work of harvesting cocoa. What will it take to fix the problem?</p>
           <p><span class="serif-italic">By Brian O'Keefe</span></p>
-          <div class="caption absolute">Cocoa farming in Ivory Coast<img src="images/arrow.png"></div>
+          <div class="caption absolute"><span class="absolute2"><img src="images/arrow.png"></span><p>Cocoa farming in Ivory Coast</p></div>
         </article>
         <article class="col-2"><img src="images/bitter-sweets.jpg"></article>
         <article class="col-3">
@@ -53,7 +56,7 @@
           <p class="serif-italic">By Christopher Tkaczyk</p></article>
         <article class="lower-section-col">
           <span class="page-number">119</span>
-          <h1>Exclusive Q&A:</h1>
+          <h1>Exclusive Q&amp;A:</h1>
           <h1>Apple CEO Tim Cook</h1>
           <p>On Apple's down-cycle strategy, its evolving mind-set, and that rumored car.</p>
           <p class="serif-italic">By Adam Lashinsky</p></article>
@@ -64,8 +67,8 @@
           <p class="serif-italic">By Brian Dumaine</p></article>
       </section>
 <!-- footer -->
-      <footer class="footer1">ON THE COVER: PHOTOGRAPH BY NANCY NEWBERRY   THIS PAGE: PHOTOGRAP BY BENJAMIN LOWY</footer>
-      <footer class="footer2">March 1, 2016 FORTUNE.COM  3</footer>
+      <footer class="footer1"><div class="float-left"><p>ON THE COVER: PHOTOGRAPH BY NANCY NEWBERRY</p></div><div class="float-right"><p>THIS PAGE: PHOTOGRAPH BY BENJAMIN LOWY</p></div></footer>
+      <footer class="footer2"><p><span class="serif-italic">March 1, 2016</span> <span class="red">|</span> FORTUNE.COM <span class="red">|</span><span class="bold"> 3</span></p></footer>
     </div>
   </body>
 </html>
