additional styles added to provide more styling to text

--- a/fortune.html
+++ b/fortune.html
@@ -16,7 +16,7 @@
       <header class="header1"><p><span class="padding-right">March 1, 2016</span><span class="padding-right">Volume 173</span> Number 3</p></header>
 <!-- fortune -->
       <header class="header2">
-        <h1>FORTUNE</h1>
+        <h1><span>FORTUNE</span></h1>
         <p class="absolute3">features</p>
       </header>
 <!-- top section -->
@@ -41,9 +41,9 @@
           <p class="serif-italic">By Scott Cendrowski</p>
 
           <span class="page-number">98</span>
-          <h1>The Fortune Entrepreneurs</h1>
+          <h1>The <span class="italic">Fortune</span> Entrepreneurs</h1>
           <p>Meet 15 founders who are disrupting their industries in novel ways. (One of those industries might be yours.)</p>
-          <p class="serif-italic">By the Fortune staff</p>
+          <p class="serif-italic">By the<span class="not-italic"> Fortune</span> staff</p>
         </article>
       </section>
 <!-- bottom section -->
@@ -67,7 +67,7 @@
           <p class="serif-italic">By Brian Dumaine</p></article>
       </section>
 <!-- footer -->
-      <footer class="footer1"><div class="float-left"><p>ON THE COVER: PHOTOGRAPH BY NANCY NEWBERRY</p></div><div class="float-right"><p>THIS PAGE: PHOTOGRAPH BY BENJAMIN LOWY</p></div></footer>
+      <footer class="footer1"><div class="float-left"><p>ON THE COVER: <span class="reduce-font">PHOTOGRAPH BY</span><span class="photo-name"> NANCY NEWBERRY</span></p></div><div class="float-right"><p>THIS PAGE:<span class="reduce-font"> PHOTOGRAPH</span><span class="photo-name"> BY BENJAMIN LOWY</span></p></div></footer>
       <footer class="footer2"><p><span class="serif-italic">March 1, 2016</span> <span class="red">|</span> FORTUNE.COM <span class="red">|</span><span class="bold"> 3</span></p></footer>
     </div>
   </body>
