add arrow graphic

--- a/fortune.html
+++ b/fortune.html
@@ -67,7 +67,7 @@
           <p class="serif-italic">By Brian Dumaine</p></article>
       </section>
 <!-- footer -->
-      <footer class="footer1"><div class="float-left"><p>ON THE COVER: <span class="reduce-font">PHOTOGRAPH BY</span><span class="photo-name"> NANCY NEWBERRY</span></p></div><div class="float-right"><p>THIS PAGE:<span class="reduce-font"> PHOTOGRAPH</span><span class="photo-name"> BY BENJAMIN LOWY</span></p></div></footer>
+      <footer class="footer1"><div class="float-left"><p>ON THE COVER: <span class="reduce-font">PHOTOGRAPH BY</span><span class="photo-name"> NANCY NEWBERRY</span></p></div><div class="float-right"><p>THIS PAGE:<span class="reduce-font"> PHOTOGRAPH BY</span><span class="photo-name"> BENJAMIN LOWY</span></p></div></footer>
       <footer class="footer2"><p><span class="serif-italic">March 1, 2016</span> <span class="red">|</span> FORTUNE.COM <span class="red">|</span><span class="bold"> 3</span></p></footer>
     </div>
   </body>
